--- a/src/app/account/auth/passwordreset/passwordreset.component.html
+++ b/src/app/account/auth/passwordreset/passwordreset.component.html
@@ -19,8 +19,8 @@
               </div>
             </div>
           </div>
-          <div class="card-body pt-0">
-            <div>
+          <div class="card-body pt-3">
+            <!-- <div>
               <a href="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
@@ -28,7 +28,7 @@
                   </span>
                 </div>
               </a>
-            </div>
+            </div> -->
 
             <form class="needs-validation" name="resetForm" [formGroup]="resetForm" (ngSubmit)="onSubmit()" novalidate>
 
@@ -57,7 +57,7 @@
         <!-- end card -->
         <div class="mt-5 text-center">
           <p>Remember It ? <a routerLink="/account/login" class="font-weight-medium text-primary"> Sign In here</a> </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <!-- <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p> -->
         </div>
 
       </div> <!-- end col -->
