--- a/src/app/t-pages/dashboard/dashboard.component.html
+++ b/src/app/t-pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
     <div class="container-fluid">
         <a class="navbar-brand" href="/#/dashboard">Tokoku</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
                 <li class="nav-item d-flex align-items-center mx-3">
                     <img src="../../../assets/img/home-solid.svg" alt="" style="width: 20px">
                     <a href="/#/dashboard" class="nav-link active">Dashboard</a>
@@ -115,14 +115,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="pt-4">
+                <div class="p-3 d-flex justify-content-center">
                     <form class="row g-3">
-                        <div class="col-auto d-flex justify-content-center align-items-center">
-                            <label for="date1" class="me-3">Awal</label>
+                        <div class="col-auto d-flex justify-content-center">
+                            <label for="date1" class="mr-3">Awal</label>
                             <input type="date" class="form-control" id="date1">
                         </div>
                         <div class="col-auto d-flex justify-content-center align-items-center">
-                            <label for="date2" class="me-3">Akhir</label>
+                            <label for="date2" class="mr-3">Akhir</label>
                             <input type="date" class="form-control" id="date2">
                         </div>
                     </form>
