--- a/src/app/t-pages/kasir/kasir.component.html
+++ b/src/app/t-pages/kasir/kasir.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
     <div class="container-fluid">
         <a class="navbar-brand" href="/#/dashboard">Tokoku</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
                 <li class="nav-item d-flex align-items-center mx-3">
                     <img src="../../../assets/img/home-solid.svg" alt="" style="width: 20px">
                     <a href="/#/dashboard" class="nav-link active">Dashboard</a>
@@ -30,7 +30,6 @@
             <a href="/#/login" class="d-flex align-items-center mx-3">
                 <img src="../../../assets/img/sign-out-alt-solid.svg" style="width: 20px; " class="text-light" alt="">
             </a>
-
         </div>
     </div>
 </nav>
@@ -55,7 +54,8 @@
                 <li class="list-group-item">Pembelian</li>
                 <!-- Pengaturan -->
                 <li class="list-group-item list-group-item-primary">Laporan</li>
-                <li class="list-group-item"><a href="/#/laporan" class="text-decoration-none text-muted">Penjualan</a></li>
+                <li class="list-group-item"><a href="/#/laporan" class="text-decoration-none text-muted">Penjualan</a>
+                </li>
             </ul>
         </div>
 
@@ -79,7 +79,8 @@
                             <div class="mb-3 row">
                                 <label for="customer" class="col-sm-3 col-form-label">Customer</label>
                                 <div class="col-sm-8">
-                                    <select class="form-select text-center" id="customer" style="width: 240px; height: 40px;">
+                                    <select class="form-select form-control text-center" id="customer"
+                                            style="width: 230px; height: 40px;">
                                         <option>------</option>
                                         <option>Makanan</option>
                                         <option>Minuman</option>
@@ -117,8 +118,8 @@
                     <div class="card shadow-sm">
                         <div class="card-body">
                             <div class="mb-3 row">
-                                <span class="fs-3">Total</span>
-                                <div class="col-sm-8 mt-4">
+                                <span class="ml-2" style="font-size: 20px;">Total</span>
+                                <div class="col-sm-12 mt-4">
                                     <h1 style="font-size: 60px">100000</h1>
                                 </div>
                             </div>
@@ -126,9 +127,9 @@
                     </div>
                 </div>
                 <div class="col my-4">
-                    <div class="containter-fluid ">
-                        <table class="table table-responsive table-bordered">
-                            <thead class="table-primary" style="background-color: #cfe2ff;">
+                    <div class="containter-fluid">
+                        <table class="table table-bordered">
+                            <thead class="thead-dark">
                             <tr>
                                 <th scope="col">No</th>
                                 <th scope="col">Produk</th>
@@ -153,13 +154,13 @@
                             </tr>                                   -->
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Nasi Ayam Geprek</td>
-                                <td>8000</td>
-                                <td>2</td>
-                                <td>0</td>
-                                <td>20000</td>
+                                <td class="text-left">Nasi Ayam Geprek</td>
+                                <td class="text-left">8000</td>
+                                <td class="text-left">2</td>
+                                <td class="text-left">0</td>
+                                <td class="text-left">20000</td>
                                 <td>
-                                    <a class="btn btn-warning me-2" (click)="open(editData)">
+                                    <a class="btn btn-warning mr-2" (click)="open(editData)">
                                         <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
                                     </a>
                                     <a href="" class="btn btn-danger align-items-center">
@@ -169,13 +170,13 @@
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Nasi Goreng</td>
-                                <td>8000</td>
-                                <td>2</td>
-                                <td>0</td>
-                                <td>20000</td>
+                                <td class="text-left">Nasi Goreng</td>
+                                <td class="text-left">8000</td>
+                                <td class="text-left">2</td>
+                                <td class="text-left">0</td>
+                                <td class="text-left">20000</td>
                                 <td>
-                                    <a class="btn btn-warning me-2" (click)="open(editData)">
+                                    <a class="btn btn-warning mr-2" (click)="open(editData)">
                                         <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
                                     </a>
                                     <a href="" class="btn btn-danger align-items-center">
@@ -185,13 +186,13 @@
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
-                                <td>Kopi</td>
-                                <td>9000</td>
-                                <td>2</td>
-                                <td>0</td>
-                                <td>20000</td>
+                                <td class="text-left">Kopi</td>
+                                <td class="text-left">9000</td>
+                                <td class="text-left">2</td>
+                                <td class="text-left">0</td>
+                                <td class="text-left">20000</td>
                                 <td>
-                                    <a class="btn btn-warning me-2" (click)="open(editData)">
+                                    <a class="btn btn-warning mr-2" (click)="open(editData)">
                                         <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
                                     </a>
                                     <a href="" class="btn btn-danger align-items-center">
@@ -201,13 +202,13 @@
                             </tr>
                             <tr>
                                 <th scope="row">4</th>
-                                <td>Nasi Ayam Geprek</td>
-                                <td>8000</td>
-                                <td>2</td>
-                                <td>0</td>
-                                <td>20000</td>
+                                <td class="text-left">Nasi Ayam Geprek</td>
+                                <td class="text-left">8000</td>
+                                <td class="text-left">2</td>
+                                <td class="text-left">0</td>
+                                <td class="text-left">20000</td>
                                 <td>
-                                    <a class="btn btn-warning me-2" (click)="open(editData)">
+                                    <a class="btn btn-warning mr-2" (click)="open(editData)">
                                         <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
                                     </a>
                                     <a href="" class="btn btn-danger align-items-center">
@@ -268,10 +269,10 @@
                 <div class="col-sm-4 rounded-2">
                     <div class="card shadow-sm">
                         <div class="card-body">
+                            <label for="floatingTextarea2">Notes</label>
                             <div class="form-floating">
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                           style="height: 320px"></textarea>
-                                <label for="floatingTextarea2">Notes</label>
                             </div>
                         </div>
                     </div>
@@ -312,8 +313,8 @@
                            formControlName="name">
                 </div>
                 <div class="mb-3">
-                    <label for="editCategory" class="form-label">Kategori Makanan</label>
-                    <select class="form-select" id="editCategory">
+                    <label for="editCategory" class="form-label d-block">Kategori Makanan</label>
+                    <select class="form-select form-control" id="editCategory">
                         <option>------</option>
                         <option>Makanan</option>
                         <option>Minuman</option>
