--- a/src/app/t-pages/product/product.component.html
+++ b/src/app/t-pages/product/product.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
     <div class="container-fluid">
         <a class="navbar-brand" href="/#/dashboard">Tokoku</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
                 <li class="nav-item d-flex align-items-center mx-3">
                     <img src="../../../assets/img/home-solid.svg" alt="" style="width: 20px">
                     <a href="/#/dashboard" class="nav-link active">Dashboard</a>
@@ -54,102 +54,105 @@
                 <li class="list-group-item">Pembelian</li>
                 <!-- Pengaturan -->
                 <li class="list-group-item list-group-item-primary">Laporan</li>
-                <li class="list-group-item"><a href="/#/laporan" class="text-decoration-none text-muted">Penjualan</a></li>
+                <li class="list-group-item"><a href="/#/laporan" class="text-decoration-none text-muted">Penjualan</a>
+                </li>
             </ul>
         </div>
 
-        <div class="col-xl-10 py-4">
+        <div class="col-lg-10 py-4">
             <h2 class="">Produk</h2>
-            <div class="bd-highlight d-flex align-items-center mt-3">
+            <div class="bd-highlight d-flex align-items-center mt-3 ">
                 <!-- <label for="exampleFormControlSelect1" class="me-2">Kategori : </label> -->
-                <select class="form-select text-center " id="kategori" style="width: 125px; height: 40px;">
+                <select class="form-select text-center rounded" id="kategori" style="width: 125px; height: 40px;">
                     <option>------</option>
                     <option>Makanan</option>
                     <option>Minuman</option>
                     <option>Snack</option>
                 </select>
                 <!-- add data -->
-                <button class="btn btn-primary ms-auto" (click)="open(addData)">Tambah</button>
+                <button class="btn btn-primary ml-auto" (click)="open(addData)">Tambah</button>
             </div>
 
-            <table class="table table-responsive table-bordered mt-4">
-                <thead class="table" style="background-color: #cfe2ff;">
-                <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Produk</th>
-                    <th scope="col">Kategori</th>
-                    <th scope="col">Harga</th>
-                    <th scope="col">Aksi</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let val of products">
-                    <th scope="row">{{val.id}}</th>
-                    <td>{{val.name}}</td>
-                    <td>{{val.category}}</td>
-                    <td>{{val.price}}</td>
-                    <td>
-                        <a href="" class="btn btn-warning me-2">Edit</a> <a href="" class="btn btn-danger">Hapus</a>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Nasi Ayam Geprek</td>
-                    <td>Makanan</td>
-                    <td>20.000</td>
-                    <td>
-                        <a class="btn btn-warning me-2" (click)="open(editData)">
-                            <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
-                        </a>
-                        <a href="" class="btn btn-danger">
-                            <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Nasi Goreng</td>
-                    <td>Makanan</td>
-                    <td>20.000</td>
-                    <td class="d-flex">
-                        <a class="btn btn-warning me-2" (click)="open(editData)">
-                            <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
-                        </a>
-                        <a href="" class="btn btn-danger align-items-center">
-                            <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Kopi</td>
-                    <td>Minuman</td>
-                    <td>20.000</td>
-                    <td>
-                        <a class="btn btn-warning me-2" (click)="open(editData)">
-                            <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
-                        </a>
-                        <a href="" class="btn btn-danger">
-                            <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>Nasi Ayam Geprek</td>
-                    <td>Makanan</td>
-                    <td>20.000</td>
-                    <td>
-                        <a class="btn btn-warning me-2" (click)="open(editData)">
-                            <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
-                        </a>
-                        <a href="" class="btn btn-danger">
-                            <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="container-fluid">
+                <table class="table table-bordered table-striped mt-4">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">No</th>
+                        <th scope="col">Produk</th>
+                        <th scope="col">Kategori</th>
+                        <th scope="col">Harga</th>
+                        <th scope="col">Aksi</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of products">
+                        <th scope="row">{{item.id}}</th>
+                        <td>{{item.name}}</td>
+                        <td>{{item.category}}</td>
+                        <td>{{item.price}}</td>
+                        <td>
+                            <a href="" class="btn btn-warning me-2">Edit</a> <a href="" class="btn btn-danger">Hapus</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td class="text-left">Nasi Ayam Geprek</td>
+                        <td class="text-left">Makanan</td>
+                        <td  class="text-left">20.000</td>
+                        <td>
+                            <a class="btn btn-warning mr-2" (click)="open(editData)">
+                                <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
+                            </a>
+                            <a href="" class="btn btn-danger">
+                                <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td class="text-left">Nasi Goreng</td>
+                        <td class="text-left">Makanan</td>
+                        <td class="text-left">20.000</td>
+                        <td>
+                            <a class="btn btn-warning mr-2" (click)="open(editData)">
+                                <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
+                            </a>
+                            <a href="" class="btn btn-danger align-items-center">
+                                <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td class="text-left">Kopi</td>
+                        <td class="text-left">Minuman</td>
+                        <td class="text-left">20.000</td>
+                        <td>
+                            <a class="btn btn-warning mr-2" (click)="open(editData)">
+                                <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
+                            </a>
+                            <a href="" class="btn btn-danger">
+                                <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td class="text-left">Nasi Ayam Geprek</td>
+                        <td class="text-left">Makanan</td>
+                        <td class="text-left">20.000</td>
+                        <td>
+                            <a class="btn btn-warning mr-2" (click)="open(editData)">
+                                <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
+                            </a>
+                            <a href="" class="btn btn-danger">
+                                <img src="../../../assets/img/trash-solid.svg" alt="" width="16">
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
@@ -171,8 +174,8 @@
                            formControlName="name">
                 </div>
                 <div class="mb-3">
-                    <label for="category" class="form-label">Kategori Makanan</label>
-                    <select class="form-select" id="category">
+                    <label for="category" class="form-label d-block">Kategori Makanan</label>
+                    <select class="form-select form-control" id="category">
                         <option>------</option>
                         <option>Makanan</option>
                         <option>Minuman</option>
@@ -214,8 +217,8 @@
                            formControlName="name">
                 </div>
                 <div class="mb-3">
-                    <label for="editCategory" class="form-label">Kategori Makanan</label>
-                    <select class="form-select" id="editCategory">
+                    <label for="editCategory" class="form-label d-block">Kategori Makanan</label>
+                    <select class="form-select form-control" id="editCategory">
                         <option>------</option>
                         <option>Makanan</option>
                         <option>Minuman</option>
