add api for database

--- a/src/app/t-pages/laporan/laporan.component.html
+++ b/src/app/t-pages/laporan/laporan.component.html
@@ -103,8 +103,8 @@
                 <div class="col-xl-12 my-4 d-flex justify-content-center">
                     <div class="">
                         <a class="btn btn-info mx-4" href="/#/cetak-laporan">Tampilkan</a>
-                        <a class="btn btn-danger mx-4" (click)="download()">PDF</a>
-                        <a class="btn btn-success mx-4">Excel</a>
+                        <a class="btn btn-danger mx-4" (click)="downloadPDF()">PDF</a>
+                        <a class="btn btn-success mx-4" (click)="downloadExcel()">Excel</a>
                     </div>
                 </div>
                 <div class="col my-4">
