cleaning the code

--- a/src/app/t-account/forgotpassword/forgotpassword.component.html
+++ b/src/app/t-account/forgotpassword/forgotpassword.component.html
@@ -58,7 +58,7 @@
                 </div>
                 <!-- end card -->
                 <div class="mt-5 text-center">
-                    <p>Remember It ? <a href="/#/login" class="font-weight-medium text-primary"> Sign In
+                    <p>Remember It ? <a href="/#/auth/login" class="font-weight-medium text-primary"> Sign In
                         here</a></p>
                     <!-- <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p> -->
                 </div>
