--- a/src/app/t-account/login/login.component.html
+++ b/src/app/t-account/login/login.component.html
@@ -51,16 +51,16 @@
                                     <label class="form-check-label" for="exampleCheck1">Remember me</label>
 
                                 </div>
-                                <a class="w-100 btn btn-lg btn-primary shadow-sm text-light" (click)="onSubmit()">Login</a>
+                                <button class="w-100 btn btn-lg btn-primary shadow-sm text-light" type="submit">Login</button>
                                 <div class="mt-4 text-center">
-                                    <a href="/#/forgot" class="text-primary text-decoration-none"><i class="fas fa-lock"></i> Forgot
+                                    <a href="/#/auth/forgot" class="text-primary text-decoration-none"><i class="fas fa-lock"></i> Forgot
                                         your password?</a>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
-                <span class="d-flex justify-content-center py-3">Don't have an account?<a href="/#/register" class="text-decoration-none">Sign up</a></span>
+                <span class="d-flex justify-content-center py-3">Don't have an account?<a href="/#/auth/register" class="text-decoration-none">Sign up</a></span>
                 <!-- <div class="mt-5 text-center">
                     <p style="margin-bottom: 3px;">Developed with <i class="fas fa-heart text-danger"></i> by Venturo
                         Camp</p>
