--- a/src/app/t-account/register/register.component.html
+++ b/src/app/t-account/register/register.component.html
@@ -31,19 +31,21 @@
                         </div> -->
                         <div class="p-4">
 
-                            <form class="form-horizontal" name="signupForm" [formGroup]="signupForm" (ngSubmit)="onSubmit()"
+                            <form class="form-horizontal" name="signupForm" [formGroup]="signupForm"
+                                  (ngSubmit)="onSubmit()"
                                   novalidate>
 
-<!--                                <ngb-alert type="success" *ngIf="successmsg" [dismissible]="false">Registeration successfull.-->
-<!--                                </ngb-alert>-->
+                                <!--                                <ngb-alert type="success" *ngIf="successmsg" [dismissible]="false">Registeration successfull.-->
+                                <!--                                </ngb-alert>-->
 
-<!--                                <ngb-alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</ngb-alert>-->
+                                <!--                                <ngb-alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</ngb-alert>-->
 
                                 <div class="form-group mb-3">
                                     <label for="name">Username</label>
 
                                     <input type="text" formControlName="name" class="form-control"
-                                           [ngClass]="{ 'is-invalid': submitted && f.name.errors }" id="name" placeholder="Enter username" />
+                                           [ngClass]="{ 'is-invalid': submitted && f.name.errors }" id="name"
+                                           placeholder="Enter username"/>
 
                                     <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
                                         <div *ngIf="f.name.errors.required">Userame is required</div>
@@ -54,7 +56,8 @@
                                     <label for="email">Email</label>
 
                                     <input type="email" formControlName="email" class="form-control"
-                                           [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="email" placeholder="Email" />
+                                           [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="email"
+                                           placeholder="Email"/>
 
                                     <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                         <div *ngIf="f.email.errors.required">Email is required</div>
@@ -66,7 +69,8 @@
                                     <label for="password">Password</label>
 
                                     <input type="password" formControlName="password" class="form-control"
-                                           [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password" placeholder="Password" />
+                                           [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password"
+                                           placeholder="Password"/>
 
                                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                                         <div *ngIf="f.password.errors.required">Password is required</div>
@@ -77,20 +81,23 @@
                                     <label for="password">Confirm Password</label>
 
                                     <input type="password" formControlName="confirmPassword" class="form-control"
-                                           [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" id="confirmPassword" placeholder="Confirm Password" />
+                                           [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"
+                                           id="confirmPassword" placeholder="Confirm Password"/>
 
                                     <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-                                        <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                                        <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required
+                                        </div>
                                         <div *ngIf="f.confirmPassword.errors.mustMatch">Password must be match</div>
                                     </div>
                                 </div>
 
                                 <div class="mt-4">
-                                    <button class="btn btn-primary btn-block" type="submit">Register</button>
+                                    <button class="btn btn-primary btn-block" type="submit" type="submit">Register</button>
                                 </div>
                                 <div class="mt-4 text-center">
                                     <p class="mb-0">By registering you agree to the Skote <a href="javascript: void(0);"
-                                                                                             class="text-primary">Terms of
+                                                                                             class="text-primary">Terms
+                                        of
                                         Use</a></p>
                                 </div>
                             </form>
@@ -100,7 +107,7 @@
                 <!-- end card -->
 
                 <div class="mt-5 text-center">
-                    <p>Already have an account ? <a href="/#/login" class="font-weight-medium text-primary"> Login</a>
+                    <p>Already have an account ? <a href="/#/auth/login" class="font-weight-medium text-primary"> Login</a>
                     </p>
                     <!-- <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p> -->
                 </div>
