--- a/src/app/t-pages/transaksi/transaksi.component.html
+++ b/src/app/t-pages/transaksi/transaksi.component.html
@@ -1,64 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/#/dashboard">Tokoku</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
-                <li class="nav-item d-flex align-items-center mx-3">
-                    <img src="../../../assets/img/home-solid.svg" alt="" style="width: 20px">
-                    <a href="/#/dashboard" class="nav-link active">Dashboard</a>
-                </li>
-                <li class="nav-item d-flex align-items-center mx-3">
-                    <img src="../../../assets/img/box-solid.svg" alt="" style="width: 15px">
-                    <a href="/#/product" class="nav-link active">Produk</a>
-                </li>
-                <li class="nav-item d-flex align-items-center mx-3">
-                    <img src="../../../assets/img/wallet-solid.svg" alt="" style="width: 15px">
-                    <a href="/#/kasir" class="nav-link active">Kasir</a>
-                </li>
-                <li class="nav-item d-flex align-items-center mx-3">
-                    <img src="../../../assets/img/file-alt-solid.svg" alt="" style="width: 12px">
-                    <a href="/#/transaksi" class="nav-link active">Transaksi</a>
-                </li>
-            </ul>
-            <a href="/#/dashboard" class="d-flex align-items-center mx-2">
-                <img src="../../../assets/img/user-solid.svg" style="width: 20px;" class="text-light" alt="">
-            </a>
-            <a href="/#/login" class="d-flex align-items-center mx-3">
-                <img src="../../../assets/img/sign-out-alt-solid.svg" style="width: 20px; " class="text-light" alt="">
-            </a>
-        </div>
-    </div>
-</nav>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-xl-2 py-4">
-            <ul class="list-group">
-                <!-- produk -->
-                <li class="list-group-item list-group-item-primary">Produk</li>
-                <li class="list-group-item">Kelola Produk</li>
-                <li class="list-group-item">Diskon</li>
-                <li class="list-group-item">Kategory Produk</li>
-                <!-- Toko -->
-                <li class="list-group-item list-group-item-primary">Kelola Toko</li>
-                <li class="list-group-item">Pembayaran</li>
-                <li class="list-group-item">Outlet</li>
-                <li class="list-group-item">Inventory</li>
-                <!-- Transaksi -->
-                <li class="list-group-item list-group-item-primary">Transaksi</li>
-                <li class="list-group-item">Penjualan</li>
-                <li class="list-group-item">Pembelian</li>
-                <!-- Pengaturan -->
-                <li class="list-group-item list-group-item-primary">Laporan</li>
-                <li class="list-group-item"><a href="/#/laporan" class="text-decoration-none text-muted">Penjualan</a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-xl-10 pt-4">
             <div class="my-3">
                 <form class="row g-3">
                     <div class="col-auto d-flex">
@@ -106,27 +45,20 @@
                                 <th scope="col">Waktu</th>
                                 <th scope="col">Kasir</th>
                                 <th scope="col">Total Transaksi</th>
+                                <th scope="col">Jenis Pembayaran</th>
+                                <th scope="col">Customer</th>
                                 <th scope="col">Action</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <!-- <tr *ngFor="let kasir of tableKasir">
-                              <th scope="row">{{kasir.id}}</th>
-                              <td>{{kasir.name}}</td>
-                              <td>{{kasir.price}}</td>
-                              <td>{{kasir.qty}}</td>
-                              <td>{{kasir.discount}}</td>
-                              <td>{{kasir.total}}</td>
-                              <td>
-                                  <a href="" class="btn btn-warning me-2">Edit</a>  <a href="" class="btn btn-danger">Hapus</a>
-                              </td>
-                            </tr>                                   -->
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>hdf62jhd9s</td>
-                                <td>6/12/09</td>
-                                <td>Budi Nugroho</td>
-                                <td>100000</td>
+                            <tr *ngFor="let value of tableTransaksi; index as i">
+                                <th scope="row">{{i + 1}}</th>
+                                <td>{{value.id}}</td>
+                                <td>{{value.time}}</td>
+                                <td>{{value.kasir}}</td>
+                                <td>{{value.total}}</td>
+                                <td>{{value.jenisPembayaran}}</td>
+                                <td>{{value.customer}}</td>
                                 <td>
                                     <a class="btn btn-warning mr-2" (click)="open(editData)">
                                         <img src="../../../assets/img/edit-solid.svg" alt="" width="18">
@@ -138,15 +70,12 @@
                                         <img src="../../../assets/img/file-download-solid.svg" alt="" width="14">
                                     </a>
                                 </td>
-                            </tr>
+                            </tr>                               -->
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
 
 
 <!--edit data-->
